--- a/src/app/components/formsparts/user-create/user-create.component.html
+++ b/src/app/components/formsparts/user-create/user-create.component.html
@@ -92,7 +92,8 @@
                                       </option>
                                       <!--<option value="0">Cliente</option> -->
                                     </select>
-                                    <div *ngIf="(submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted)" class="validate-error">El campo es requerido
+                                    <div *ngIf="(submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted)" class="validate-error">
+                                        El campo es requerido
                                     </div>
                                 </div>
                             </div>
