--- a/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
+++ b/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
@@ -41,23 +41,23 @@
                                         <p class="validate-error">Caracteres no validos</p>
                                     </div>
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <label for="tipo">Tipo</label>
+                                <!-- <div class="form-group col-md-6">
+                                    <label for="tipo">Tipo</label> -->
                                     <!-- <input type="text" name="tipo" class="form-control" placeholder="tipo" formControlName="tipo" [ngClass]="{ 'is-invalid': (submitted && formControls.tipo.errors && formControls.tipo.errors.required) || (formControls.tipo.errors?.required && formControls.tipo.touched && !submitted) }"> -->
-                                    <select name="tipo" class="custom-select" id="tipo" formControlName="tipo" [ngClass]="{ 'is-invalid': (submitted && formControls.tipo.errors && formControls.tipo.errors.required) || (formControls.tipo.errors?.required && formControls.tipo.touched && !submitted) }" >
-                                            <option value="0" disabled="true">- Selecionar tipo -</option>
+                                    <!-- <select name="tipo" class="custom-select" id="tipo" formControlName="tipo" [ngClass]="{ 'is-invalid': (submitted && formControls.tipo.errors && formControls.tipo.errors.required) || (formControls.tipo.errors?.required && formControls.tipo.touched && !submitted) }" >
+                                            <option value="0" disabled="true">- Selecionar tipo -</option> -->
                                             <!-- <option *ngFor="let rols of roles; let i = index" [value]="rols">
                                               {{rols}}
                                             </option> -->
-                                            <option value="1">nacional</option>
+                                      <!--       <option value="1">nacional</option>
                                             <option value="1">vegetariana</option>
                                             <option value="1">internacional</option>
                                     </select>
                                     <div *ngIf="(submitted && formControls.tipo.errors && formControls.tipo.errors.required) || (formControls.tipo.errors?.required && formControls.tipo.touched && !submitted)">
                                         <p class="validate-error">El campo es requerido</p>
                                     </div>
-                                </div>
-
+                                </div> -->
+<!-- 
                                 <div class="form-group col-md-6">
                                     <label for="nit">NIT</label>
                                     <input name="nit" class="form-control" placeholder="nit" formControlName="nit">
@@ -67,8 +67,8 @@
                                     <div *ngIf="formControls.nit.errors?.pattern">
                                         <p class="validate-error">Caracteres no validos</p>
                                     </div>
-                                </div>
-                                <div class="form-group col-md-6">
+                                </div> -->
+                                <!-- <div class="form-group col-md-6">
                                         <label for="direccion">Direccion</label>
                                         <input name="direccion" class="form-control" placeholder="direccion" formControlName="direccion">
                                         <div *ngIf="(submitted && formControls.direccion.errors && formControls.direccion.errors.required) || (formControls.direccion.errors?.required && formControls.direccion.touched && !submitted)">
@@ -77,7 +77,7 @@
                                         <div *ngIf="formControls.direccion.errors?.pattern">
                                             <p class="validate-error">Caracteres no validos</p>
                                         </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="form-row">
                                     <div class="col-md-6">
@@ -92,7 +92,7 @@
                             </div>
                             <div class="border mt-4">
                                 <div class="form-row">
-                                    <div class="form-group col-md-2">
+                                    <!-- <div class="form-group col-md-2">
                                         <label for="dias">Dias de atencion</label>
                                         <div class="d-inline d-flex">
                                              <p  class="ml-4">Lunes</p>
@@ -100,8 +100,8 @@
                                                  <input type="checkbox" formControlName="dia1">
                                              </div>
                                         </div>
-                                    </div>
-                                    <div class="form-group col-md-4">
+                                    </div> -->
+                                    <!-- <div class="form-group col-md-4">
                                         <label for="hora_apertura">Hora Apertura</label>
                                         <input name="hora_apertura" class="form-control" placeholder="00:00 am" formControlName="hora_apertura">
                                         <div *ngIf="(submitted && formControls.hora_apertura.errors && formControls.hora_apertura.errors.required) || (formControls.hora_apertura.errors?.required && formControls.hora_apertura.touched && !submitted)">
@@ -120,10 +120,10 @@
                                         <div *ngIf="formControls.hora_cierre.errors?.pattern">
                                             <p class="validate-error">Caracteres no validos</p>
                                         </div>
-                                    </div>
+                                    </div> -->
                                </div>
                                <div class="form-row">
-                                    <div class="form-group col-md-2">
+                                    <!-- <div class="form-group col-md-2">
                                         <div class="d-inline d-flex">
                                              <p class="ml-3">Martes</p>
                                              <div class="ml-3 pl-3">
@@ -148,10 +148,10 @@
                                         <div *ngIf="formControls.hora_cierre.errors?.pattern">
                                             <p class="validate-error">Caracteres no validos</p>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="form-row">
-                                        <div class="form-group col-md-2">
+                                     <!--    <div class="form-group col-md-2">
                                             <div class="d-inline d-flex">
                                                  <p class="ml-3">Miercoles</p>
                                                  <div class="ml-2 pl-2">
@@ -176,10 +176,10 @@
                                             <div *ngIf="formControls.hora_cierre.errors?.pattern">
                                                 <p class="validate-error">Caracteres no validos</p>
                                             </div>
-                                        </div>
+                                        </div> -->
                                 </div>
                                 <div class="form-row">
-                                        <div class="form-group col-md-2">
+                                        <!-- <div class="form-group col-md-2">
                                             <div class="d-inline d-flex">
                                                  <p class="ml-3">Jueves</p>
                                                  <div class="ml-3 pl-3">
@@ -204,10 +204,10 @@
                                             <div *ngIf="formControls.hora_cierre.errors?.pattern">
                                                 <p class="validate-error">Caracteres no validos</p>
                                             </div>
-                                        </div>
+                                        </div> -->
                                 </div>
                                 <div class="form-row">
-                                        <div class="form-group col-md-2">
+                                        <!-- <div class="form-group col-md-2">
                                             <div class="d-inline d-flex">
                                                  <p class="ml-3">Viernes</p>
                                                  <div class="ml-3 pl-3">
@@ -232,7 +232,7 @@
                                             <div *ngIf="formControls.hora_cierre.errors?.pattern">
                                                 <p class="validate-error">Caracteres no validos</p>
                                             </div>
-                                        </div>
+                                        </div> -->
                                 </div>
                         </div>
 
